@@ -99,7 +99,7 @@ CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :MergeSortBuffer}
 ##CONF.LOG_FILE = "/tmp/fairy/log"
 ##CONF.LOG_FLUSH_INTERVAL = 1
 ##CONF.LOG_LEVEL = :DEBUG
-#CONF.LOG_LEVEL = :INFO
+CONF.LOG_LEVEL = :INFO
 ##CONF.LOG_IMPORT_NTIMES_POP = 10000
 #CONF.LOG_IMPORT_NTIMES_POP = 1
 
